# psi-lotsearch-engine

./: BUILD_SPEC.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
lotsearch_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py
src/compose/: docx_export.py  renderer.py
src/extract/: dataset_listing.py  table_extractor.py
src/ingest/: pdf_extractor.py  section_splitter.py  state_detector.py
src/interpret/: ai_interpreter.py  prompt_builder.py  validator.py
src/prompts/: system_base.txt
src/prompts/nsw/: business_dirs.txt  defence.txt  env_setting.txt  epa_registers.txt  groundwater_bores.txt  mining.txt  pfas.txt  poeo_licences.txt  site_history_table.txt  waste_liquid_fuel.txt
src/prompts/vic/: business_dirs.txt  defence.txt  env_audits.txt  env_setting.txt  epa_registers.txt  groundwater_bores.txt  mining_fire.txt  pfas.txt  site_history_table.txt  waste_liquid_fuel.txt
src/templates/nsw/: report.md.j2
src/templates/vic/: report.md.j2
tests/: test_compose.py  test_extract.py  test_ingest.py  test_interpret.py
